--- a/TorboFile/TorboFile.csproj
+++ b/TorboFile/TorboFile.csproj
@@ -118,17 +118,20 @@
     <Compile Include="Services\InputBinder.cs" />
     <Compile Include="Services\SystemMessageBox.cs" />
     <Compile Include="ViewModels\CategoryManagerVM.cs" />
+    <Compile Include="ViewModels\Main\CustomSearchVM.cs" />
     <Compile Include="ViewModels\EditCategorySetVM.cs" />
-    <Compile Include="ViewModels\CleanFoldersModel.cs" />
+    <Compile Include="ViewModels\Main\CleanFoldersModel.cs" />
     <Compile Include="ViewModels\FileDetailsModel.cs" />
     <Compile Include="ViewModels\FileCheckListModel.cs" />
-    <Compile Include="ViewModels\FileMatchVM.cs" />
-    <Compile Include="ViewModels\FindDuplicatesModel.cs" />
+    <Compile Include="ViewModels\Main\FindDuplicatesModel.cs" />
     <Compile Include="ViewModels\EditCategoryModel.cs" />
-    <Compile Include="ViewModels\FileTestVM.cs" />
+    <Compile Include="ViewModels\Main\MainVM.cs" />
     <Compile Include="ViewModels\TagFileModel.cs" />
     <Compile Include="View\Controls\FileMatchView.xaml.cs">
       <DependentUpon>FileMatchView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\MainViews\CustomSearch.xaml.cs">
+      <DependentUpon>CustomSearch.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Controls\PreviewViews\MediaKitPreview.xaml.cs">
       <DependentUpon>MediaKitPreview.xaml</DependentUpon>
@@ -202,7 +205,7 @@
     </Compile>
     <Compile Include="Properties\SortingSettings.cs" />
     <Compile Include="ViewModels\FilePreviewModel.cs" />
-    <Compile Include="ViewModels\FileSortModel.cs" />
+    <Compile Include="ViewModels\Main\FileSortModel.cs" />
     <Compile Include="View\Controls\ProgressControl.xaml.cs">
       <DependentUpon>ProgressControl.xaml</DependentUpon>
     </Compile>
@@ -225,7 +228,15 @@
       <DependentUpon>ProgressWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\Settings.cs" />
+    <Page Include="assets\ConditionsDictionary.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="View\Controls\FileMatchView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Controls\MainViews\CustomSearch.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
