--- a/TorboFile/TorboFile.csproj
+++ b/TorboFile/TorboFile.csproj
@@ -104,7 +104,7 @@
     <Compile Include="Categories\CategoryManager.cs" />
     <Compile Include="Categories\ICategorySource.cs" />
     <Compile Include="ColorEffect.cs" />
-    <Compile Include="Model\CustomFileSearch.cs" />
+    <Compile Include="Model\CustomSearchData.cs" />
     <Compile Include="Properties\FolderCleanSettings.cs" />
     <Compile Include="Properties\PreviewSettings.cs" />
     <Compile Include="Properties\PreviewSettings.Designer.cs">
@@ -129,6 +129,7 @@
     <Compile Include="ViewModels\Main\FindCopiesVM.cs" />
     <Compile Include="ViewModels\EditCategoryModel.cs" />
     <Compile Include="ViewModels\Main\MainVM.cs" />
+    <Compile Include="ViewModels\Main\RunSearchVM.cs" />
     <Compile Include="ViewModels\TagFileModel.cs" />
     <Compile Include="View\Controls\FileMatchView.xaml.cs">
       <DependentUpon>FileMatchView.xaml</DependentUpon>
@@ -236,7 +237,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="assets\BaseDictionary.xaml">
+    <Page Include="assets\HelperDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -244,7 +245,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="assets\MainDictionary.xaml">
+    <Page Include="assets\BaseDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
