Started CustomSearchSettings, fixed errors in ConditionsDictionary, other stuff.

--- a/TorboFile/App.config
+++ b/TorboFile/App.config
@@ -2,7 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="TorboFile.Properties.PreviewSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="TorboFile.Properties.CustomSearch" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="TorboFile.Properties.FolderCleanSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="TorboFile.Properties.Sorting" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="TorboFile.Properties.FindEmpty" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
@@ -16,14 +16,17 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <userSettings>
-        <TorboFile.Properties.PreviewSettings>
-            <setting name="imageViewMode" serializeAs="String">
-                <value>Default</value>
+        <TorboFile.Properties.CustomSearch>
+            <setting name="lastDirectory" serializeAs="String">
+                <value />
             </setting>
-            <setting name="mediaViewMode" serializeAs="String">
-                <value>Default</value>
+            <setting name="saveLastDirectory" serializeAs="String">
+                <value>False</value>
             </setting>
-        </TorboFile.Properties.PreviewSettings>
+            <setting name="recursive" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </TorboFile.Properties.CustomSearch>
         <TorboFile.Properties.FolderCleanSettings>
             <setting name="recursive" serializeAs="String">
                 <value>False</value>
