--- a/TorboFile/Properties/PreviewSettings.settings
+++ b/TorboFile/Properties/PreviewSettings.settings
@@ -3,10 +3,10 @@
   <Profiles />
   <Settings>
     <Setting Name="imageViewMode" Type="TorboFile.Properties.ViewMode" Scope="User">
-      <Value Profile="(Default)">Default</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="mediaViewMode" Type="TorboFile.Properties.ViewMode" Scope="User">
-      <Value Profile="(Default)">Default</Value>
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
