Changes in Template selectors for conditions.

--- a/TorboFile/App.config
+++ b/TorboFile/App.config
@@ -26,6 +26,9 @@
             <setting name="recursive" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="saveLastSearch" serializeAs="String">
+                <value>True</value>
+            </setting>
         </TorboFile.Properties.CustomSearch>
         <TorboFile.Properties.FolderCleanSettings>
             <setting name="recursive" serializeAs="String">
