--- a/TorboFile/Properties/CustomSearch.settings
+++ b/TorboFile/Properties/CustomSearch.settings
@@ -11,5 +11,8 @@
     <Setting Name="recursive" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="saveLastSearch" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
