--- a/TorboFile/TorboFile.csproj
+++ b/TorboFile/TorboFile.csproj
@@ -133,7 +133,7 @@
     <Compile Include="ViewModels\FileDetailsVM.cs" />
     <Compile Include="ViewModels\DuplicateFilesVM.cs" />
     <Compile Include="ViewModels\Main\FindCopiesVM.cs" />
-    <Compile Include="ViewModels\EditCategoryModel.cs" />
+    <Compile Include="ViewModels\EditCategoryVM.cs" />
     <Compile Include="ViewModels\Main\MainVM.cs" />
     <Compile Include="ViewModels\Main\RunSearchVM.cs" />
     <Compile Include="ViewModels\TagFileModel.cs" />
@@ -215,7 +215,7 @@
     </Compile>
     <Compile Include="Properties\SortingSettings.cs" />
     <Compile Include="ViewModels\FilePreviewVM.cs" />
-    <Compile Include="ViewModels\Main\FileSortModel.cs" />
+    <Compile Include="ViewModels\Main\FileSortVM.cs" />
     <Compile Include="View\Controls\ProgressControl.xaml.cs">
       <DependentUpon>ProgressControl.xaml</DependentUpon>
     </Compile>
