--- a/TorboFile/TorboFile.csproj
+++ b/TorboFile/TorboFile.csproj
@@ -145,6 +145,11 @@
       <DependentUpon>CustomSearchStrings.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\FolderCleanSettings.cs" />
+    <Compile Include="Properties\MainStrings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MainStrings.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\PreviewSettings.cs" />
     <Compile Include="Properties\PreviewSettings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -160,6 +165,8 @@
     <Compile Include="Services\SystemMessageBox.cs" />
     <Compile Include="ViewModels\CategoryManagerVM.cs" />
     <Compile Include="ViewModels\FileCheckListVM.cs" />
+    <Compile Include="ViewModels\FileListVM.cs" />
+    <Compile Include="ViewModels\FileVM.cs" />
     <Compile Include="ViewModels\Main\BuildSearchVM.cs" />
     <Compile Include="ViewModels\Main\CustomSearchVM.cs" />
     <Compile Include="ViewModels\EditCategorySetVM.cs" />
@@ -171,6 +178,9 @@
     <Compile Include="ViewModels\Main\MainVM.cs" />
     <Compile Include="ViewModels\Main\RunSearchVM.cs" />
     <Compile Include="ViewModels\TagFileModel.cs" />
+    <Compile Include="View\Controls\FileList.xaml.cs">
+      <DependentUpon>FileList.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Controls\MainViews\CustomSearch.xaml.cs">
       <DependentUpon>CustomSearch.xaml</DependentUpon>
     </Compile>
@@ -199,8 +209,8 @@
     <Compile Include="View\Controls\MainViews\FileSortControl.xaml.cs">
       <DependentUpon>FileSortControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Controls\MainViews\FindDuplicatesControl.xaml.cs">
-      <DependentUpon>FindDuplicatesControl.xaml</DependentUpon>
+    <Compile Include="View\Controls\MainViews\FindCopiesControl.xaml.cs">
+      <DependentUpon>FindCopiesControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Controls\MessageBox.xaml.cs">
       <DependentUpon>MessageBox.xaml</DependentUpon>
@@ -285,6 +295,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\Controls\FileList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\Controls\MainViews\CustomSearch.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -329,7 +343,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Controls\MainViews\FindDuplicatesControl.xaml">
+    <Page Include="View\Controls\MainViews\FindCopiesControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -418,6 +432,10 @@
     <EmbeddedResource Include="Properties\CustomSearchStrings.zh.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>CustomSearchStrings.zh.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\MainStrings.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>MainStrings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
