--- a/TorboFile/App.config
+++ b/TorboFile/App.config
@@ -3,6 +3,8 @@
 
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="TorboFile.Properties.PreviewSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="TorboFile.Properties.FindCopiesSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="TorboFile.Properties.CustomSearch" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="TorboFile.Properties.FolderCleanSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="TorboFile.Properties.Sorting" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
@@ -17,6 +19,55 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <userSettings>
+        <TorboFile.Properties.PreviewSettings>
+            <setting name="saveLastDirectory" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="lastDirectory" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="lastFile" serializeAs="String">
+                <value />
+            </setting>
+        </TorboFile.Properties.PreviewSettings>
+        <TorboFile.Properties.FindCopiesSettings>
+            <setting name="recursive" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="moveToTrash" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="lastDirectory" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="includeExtensions" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="excludeExtensions" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="useSizeRange" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="minSize" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="maxSize" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="saveExtensions" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="confirmDelete" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="showFilePreviews" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="saveLastDirectory" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </TorboFile.Properties.FindCopiesSettings>
         <TorboFile.Properties.CustomSearch>
             <setting name="lastDirectory" serializeAs="String">
                 <value />
