--- a/TorboFile/Properties/FindCopiesSettings.settings
+++ b/TorboFile/Properties/FindCopiesSettings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TorboFile.Properties" GeneratedClassName="FindDuplicates">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TorboFile.Properties" GeneratedClassName="FindCopiesSettings">
   <Profiles />
   <Settings>
     <Setting Name="recursive" Type="System.Boolean" Scope="User">
@@ -26,7 +26,7 @@
     <Setting Name="maxSize" Type="System.Int64" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="rememberExtensions" Type="System.Boolean" Scope="User">
+    <Setting Name="saveExtensions" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="confirmDelete" Type="System.Boolean" Scope="User">
@@ -34,6 +34,9 @@
     </Setting>
     <Setting Name="showFilePreviews" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="saveLastDirectory" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
