--- a/TorboFile/Properties/PreviewSettings.settings
+++ b/TorboFile/Properties/PreviewSettings.settings
@@ -8,5 +8,14 @@
     <Setting Name="mediaViewMode" Type="TorboFile.Properties.ViewMode" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="saveLastDirectory" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="lastDirectory" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="lastFile" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
