Oh lots of things.

--- a/TorboFile/App.config
+++ b/TorboFile/App.config
@@ -3,6 +3,7 @@
 
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="TorboFile.Properties.CustomSearchSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="TorboFile.Properties.PreviewSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="TorboFile.Properties.FindCopiesSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="TorboFile.Properties.CustomSearch" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
@@ -19,6 +20,20 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <userSettings>
+        <TorboFile.Properties.CustomSearchSettings>
+            <setting name="lastDirectory" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="saveLastDirectory" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="saveLastSearch" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="searchFlags" serializeAs="String">
+                <value>None</value>
+            </setting>
+        </TorboFile.Properties.CustomSearchSettings>
         <TorboFile.Properties.PreviewSettings>
             <setting name="saveLastDirectory" serializeAs="String">
                 <value>False</value>
