--- a/TorboFile/TorboFile.csproj
+++ b/TorboFile/TorboFile.csproj
@@ -122,6 +122,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Categories\CategoryManager.cs" />
+    <Compile Include="Categories\CategorySetInfo.cs" />
     <Compile Include="Categories\ICategorySource.cs" />
     <Compile Include="ColorEffect.cs" />
     <Compile Include="Model\CustomSearchData.cs" />
@@ -168,16 +169,16 @@
     <Compile Include="Services\InputBinder.cs" />
     <Compile Include="Services\ITorbViewMaker.cs" />
     <Compile Include="Services\SystemMessageBox.cs" />
-    <Compile Include="ViewModels\CategoryManagerVM.cs" />
+    <Compile Include="ViewModels\Categories\CategoryManagerVM.cs" />
     <Compile Include="ViewModels\FileVM.cs" />
     <Compile Include="ViewModels\CustomSearch\BuildSearchVM.cs" />
     <Compile Include="ViewModels\CustomSearch\CustomSearchVM.cs" />
-    <Compile Include="ViewModels\EditCategorySetVM.cs" />
+    <Compile Include="ViewModels\Categories\EditCategorySetVM.cs" />
     <Compile Include="ViewModels\Main\CleanFoldersModel.cs" />
     <Compile Include="ViewModels\FileDetailsVM.cs" />
     <Compile Include="ViewModels\DuplicateFilesVM.cs" />
     <Compile Include="ViewModels\Main\FindCopiesVM.cs" />
-    <Compile Include="ViewModels\EditCategoryVM.cs" />
+    <Compile Include="ViewModels\Categories\EditCategoryVM.cs" />
     <Compile Include="ViewModels\Main\MainVM.cs" />
     <Compile Include="ViewModels\CustomSearch\RunSearchVM.cs" />
     <Compile Include="ViewModels\TagFileModel.cs" />
